--- a/app/src/main/res/layout/activity_manage_students.xml
+++ b/app/src/main/res/layout/activity_manage_students.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Mã sinh viên" />
+            android:text="Mã số sinh viên" />
 
         <EditText
             android:id="@+id/etStuId"
